[tool.poetry]
name = "everwork"
description = "For working with database"
version = "2.0.6"
packages = [{ include = "everbase" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
asyncpg = "~=0.30.0"
loguru = "~=0.7.3"
orjson = "~=3.10.16"
pydantic = "~=2.11.3"
SQLAlchemy = "~=2.0.40"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
