[project]
name = "everbase"
version = "2.0.9"

requires-python = ">=3.12,<4.0"

dependencies = [
    "asyncpg~=0.30.0",
    "loguru~=0.7.3",
    "orjson~=3.10.16",
    "pydantic~=2.11.3",
    "SQLAlchemy~=2.0.40"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
